--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,11 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -30,9 +33,9 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/mongodb": "^4.0.7",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.1",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.15",
     "cors": "^2.8.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
